--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Itim', sans-serif !important;
+    font-family: 'Itim', sans-serif;
   }
   .btn {
     text-transform: none;
